update to java 21 & springboot 3