@@ -10,20 +10,25 @@ import com.example.belajarspringboot.models.User;
 import com.example.belajarspringboot.repositories.OrderCartRepository;
 import com.example.belajarspringboot.repositories.OrderRepository;
 import com.example.belajarspringboot.repositories.UserRepository;
+import lombok.AllArgsConstructor;
+import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
 import org.hibernate.service.spi.ServiceException;
 import org.springframework.beans.factory.annotation.Autowired;
+import org.springframework.data.jpa.repository.JpaRepository;
 import org.springframework.http.HttpStatus;
 import org.springframework.security.core.Authentication;
 import org.springframework.security.core.context.SecurityContextHolder;
 import org.springframework.security.core.userdetails.UsernameNotFoundException;
 import org.springframework.stereotype.Service;
 
-import javax.transaction.Transactional;
+import jakarta.transaction.Transactional;
 import java.math.BigDecimal;
+import java.nio.file.attribute.UserPrincipal;
 import java.util.Collections;
 import java.util.List;
 import java.util.UUID;
+import java.util.concurrent.CompletableFuture;
 import java.util.stream.Collectors;
 
 import static com.example.belajarspringboot.models.Constants.PLACED;
@@ -33,27 +38,23 @@ import static com.example.belajarspringboot.models.Constants.PLACED;
 public class OrderService extends BaseService<Order, Long> {
 
     private final OrderRepository orderRepository;
-    private final UserRepository userRepository;
     private final OrderValidator orderValidator;
     private final OrderCartRepository orderCartRepository;
     private final EmailService emailService;
+    private final UserServiceImpl userService;
 
-    @Autowired
-    public OrderService(OrderRepository orderRepository,
-                        UserRepository userRepository,
-                        OrderValidator orderValidator,
-                        OrderCartRepository orderCartRepository,
-                        EmailService emailService) {
-        super(orderRepository);
+    public OrderService(JpaRepository<Order, Long> repository, OrderRepository orderRepository, OrderValidator orderValidator,
+                        OrderCartRepository orderCartRepository, EmailService emailService, UserServiceImpl userService) {
+        super(repository);
         this.orderRepository = orderRepository;
-        this.userRepository = userRepository;
         this.orderValidator = orderValidator;
         this.orderCartRepository = orderCartRepository;
         this.emailService = emailService;
+        this.userService = userService;
     }
 
     @Override
-    protected void updateEntity(Order existingEntity, Order entityDetails) {
+    public void updateEntity(Order existingEntity, Order entityDetails) {
         existingEntity.getItems().clear();
         existingEntity.getItems().addAll(entityDetails.getItems());
     }
@@ -69,7 +70,7 @@ public class OrderService extends BaseService<Order, Long> {
     @Transactional
     public SuccessApiResponse<Object> placeOrder() {
         try {
-            final User user = getUserLogin();
+            final User user = userService.getUserLogin();
             OrderCart cart = orderCartRepository.findByUserUserId(user.getUserId()).orElse(new OrderCart());
 
             orderValidator.validateCart(cart);
@@ -82,7 +83,7 @@ public class OrderService extends BaseService<Order, Long> {
                             .product(item.getProduct())
                             .quantity(item.getQuantity())
                             .build())
-                    .collect(Collectors.toList());
+                    .toList();
 
             // Create the order
             Order order = Order.builder()
@@ -97,6 +98,7 @@ public class OrderService extends BaseService<Order, Long> {
             cart.getItems().clear();
             orderCartRepository.save(cart); // Persist the empty cart
             emailService.sendOrderConfirmationToEmail(order, user.getEmail());
+            // handle if send email failed
             return SuccessApiResponse.builder()
                     .status(HttpStatus.CREATED.value())
                     .message(HttpStatus.CREATED.getReasonPhrase())
@@ -106,12 +108,5 @@ public class OrderService extends BaseService<Order, Long> {
             log.error("Error placing order: {}", e.getMessage(), e);
             throw new ServiceException("Failed to place order.", e);
         }
-    }
-
-    private User getUserLogin() {
-        Authentication authentication = SecurityContextHolder.getContext().getAuthentication();
-        String username = authentication.getName();
-        return userRepository.findByUsername(username)
-                .orElseThrow(() -> new UsernameNotFoundException("User not found"));
     }
 }
